--- a/index.html
+++ b/index.html
@@ -13,26 +13,41 @@
 
   <div class="article">
     <h3>What Are Wireframes?</h3>
-    <p></p>
+    <p>
+      Wireframes are used to get the basic design of what your website will look like. It is used to help you see what pages you will need to code, and what you want it to look like. This is useful to businesses who want a programmer to design their webpage, because it allows them to visually see what the end product might look like.
+    </p>
   </div>
 
   <div class="article">
     <h3>Git Workflow</h3>
-    <p></p>
+    <p>
+      Basically Git is where you can create and store your code so that other people can contribute their ideas to it. To start you must create a repository in github.com, and clone it to you desktop using the command "git clone" in git bash, you must then paste your url for the repository you want to clone after "git clone". Congratulations you have made a repository, you must then create your index.html, app.js, and styles.css. You will have to use the command "touch" followed by the name of your file, and file type. Once you are done with the your code you must follow these 3 steps in order to save your code into github. "git add .", "git commit -m" followed by a comment of what you did, then "git push". These 3 steps take whatever you worked on, in your local computer, and uploads it to github.com, where you can use the command "git pull", to download all your work from github.com to a different computer.
+    </p>
   </div>
 
   <div class="article">
     <h3>Ways to Create Responsive Web Design</h3>
     <ul>
       <li>
-        
+        Using Percentages instead of exact pixel sizes
+      </li>
+      <li>
+        Using DOM
+      </li>
+      <li>
+        Javascript functions
+      </li>
+      <li>
+        Make your website as if you were to use it on your phone
       </li>
     </ul>
   </div>
 
   <div class="article">
     <h3 id="fourth">Arrays and Loops</h3>
-    <p></p>
+    <p>
+      Arrays are like varibles, they are empty, but it can hold values, not only one but multiple values. You ever wrote a code that you would need to rewrite multiple times?, well thats what loops are for, it allows you to use the varibles that you put in the arrays, and run it the amount of times you want it to run.
+    </p>
   </div>
   
     
